Source/WebCore: in safari,the background-color of input[type="search"] can't work https://bugs.webkit.org/show_bug.cgi?id=119967

Patch by Santosh Mahto <santosh.ma@samsung.com> on 2013-10-14
Reviewed by Ryosuke Niwa.

When input type=search is styled with css background property then
it does not change the background-color of field. Its happening becasue
search field is not counted as styled control. Thus theme ignores the
css background property. With this patch search field is also counted as
styled control so background property reflects on search field.

Test: fast/forms/search/search-field-background-color.html

* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::isControlStyled):Now search field is also
a styled control.

LayoutTests: in safari ,the background-color of input[type="search"] can't work
https://bugs.webkit.org/show_bug.cgi?id=119967

Patch by Santosh Mahto <santosh.ma@samsung.com> on 2013-10-14
Reviewed by Ryosuke Niwa.

Added testcase to verify the background color of search field when
search field is styled with css background property.

* fast/forms/search/search-field-background-color-expected.txt: Added.
* fast/forms/search/search-field-background-color.html: Added.
* platform/mac/fast/forms/search-styled-expected.txt: Rebaselined.

Canonical link: https://commits.webkit.org/140912@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157443 268f45cc-cd09-0410-ab3c-d52691b4dbfc